[project]
name = "tes-rag"
version = "0.1.0"
description = "A RAG system for The Elder Scrolls series."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "langchain",
    "google-generativeai",
    "chromadb",
    "beautifulsoup4",
    "html2text",
    "langchain-community",
    "numpy",
    "pandas",
    "tqdm",
    "langchainhub",
    "python-dotenv",
    "reranker",
    "sentence-transformers",
    "langchain-google-genai",
    "langgraph",
    "langchain-core",
    "langchain-huggingface",
    "langchain-chroma",
    "google-auth-httplib2",
    "google-api-python-client",
]

[project.optional-dependencies]
test = [
    "pytest",
    "fastapi-cli",
    "httpx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]
